--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -4,7 +4,7 @@ name: ublue
 description: Custom Universal Blue Image
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-nvidia
+base-image: ghcr.io/ublue-os/silverblue-nvidia:470
 image-version: 39 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
