--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -29,9 +29,12 @@ modules:
       - gnome-shell-extension-appindicator
       - gnome-shell-extension-just-perfection
       - gnome-shell-extension-caffeine
+      - gnome-console
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
+      - gnome-terminal
+      - gnome-terminal-nautilus
 
   - type: bling # configure what to pull in from ublue-os/bling
     install:
