--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -23,6 +23,7 @@ modules:
   - type: rpm-ostree
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+      - https://copr.fedorainfracloud.org/coprs/kylegospo/hl2linux-selinux/repo/fedora-%OS_VERSION%/kylegospo-hl2linux-selinux-fedora-%OS_VERSION%.repo
     install:
       # - micro
       # - starship
@@ -30,6 +31,7 @@ modules:
       - gnome-shell-extension-just-perfection
       - gnome-shell-extension-caffeine
       - gnome-console
+      - hl2linux-selinux
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
