rebase ublue-mac to 38

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,7 @@ jobs:
           - recipe.yml
           - recipe-mac.yml
           - recipe-38.yml
+          - recipe-mac-38.yml
 # !!!
 
     steps:
