only build ublue-mac-38

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,10 @@ jobs:
         # Add recipes for all the images you want to build here.
         # Don't add module configuration files, you will get errors.
         recipe:
-          - recipe.yml
-          - recipe-mac.yml
-          - recipe-38.yml
           - recipe-mac-38.yml
+          # - recipe.yml
+          # - recipe-mac.yml
+          # - recipe-38.yml
 # !!!
 
     steps:
