--- a/config/recipe-mac.yml
+++ b/config/recipe-mac.yml
@@ -36,6 +36,7 @@ modules:
       - hl2linux-selinux
       - system76-scheduler
       - morewaita-icon-theme
+      - broadcom-wl
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
