--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -37,10 +37,10 @@ modules:
       - hl2linux-selinux
       - system76-scheduler
       - morewaita-icon-theme
-      - gnome-shell
-      - mutter
-      - mutter-common
-      - xorg-x11-server-Xwayland
+      # - gnome-shell
+      # - mutter
+      # - mutter-common
+      # - xorg-x11-server-Xwayland
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
@@ -84,4 +84,3 @@ modules:
     scripts:
       # this sets up the proper policy & signing files for signed images to work
       - signing.sh
-      - triple-buffer-patch.sh
