--- a/config/files/usr/share/ublue-os/firstboot/yafti.yml
+++ b/config/files/usr/share/ublue-os/firstboot/yafti.yml
@@ -64,7 +64,7 @@ screens:
             - Clocks: org.gnome.clocks
             - Connections: org.gnome.Connections
             - Contacts: org.gnome.Contacts
-            - Disk Usage Analyzer: org.gnome.baobab
+            # - Disk Usage Analyzer: org.gnome.baobab
             - Document Scanner: org.gnome.SimpleScan
             - Document Viewer: org.gnome.Evince
             - Extension Manager: com.mattjakeman.ExtensionManager
@@ -72,10 +72,10 @@ screens:
             - Image Viewer: org.gnome.Loupe
             - Logs: org.gnome.Logs
             - Maps: org.gnome.Maps
-            - Photos (Organizer): org.gnome.Photos
+            # - Photos (Organizer): org.gnome.Photos
             - Sushi (Nautilus Previewer): org.gnome.NautilusPreviewer
             - Text Editor: org.gnome.TextEditor
-            - Videos (Player): org.gnome.Totem
+            # - Videos (Player): org.gnome.Totem
             - Weather: org.gnome.Weather
         System Apps:
           description: System applications for all desktop environments.
