--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -3,7 +3,4 @@ ublue_variants:
     ks: /kickstart/ublue-os.ks
     flavors:
       - label: ublue
-  # - label: ublue-os/ublue-main
-  #   ks: /kickstart/ublue-os.ks
-  #   flavors:
-  #     - label: ublue-main
+      - Info: Ublue
