--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -1,6 +1,13 @@
+# ublue_variants:
+#   - label: ublue-os/ublue
+#     ks: /kickstart/ublue-os.ks
+#     flavors:
+#       - label: ublue
+#         info: Ublue
+
 ublue_variants:
   - label: ublue-os/ublue
-    ks: /kickstart/ublue-os.ks
+    ks: /kickstart/ublue-os-nvidia.ks
     flavors:
       - label: ublue
         info: Ublue
