--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -38,6 +38,7 @@ modules:
       - hl2linux-selinux
       - system76-scheduler
       - morewaita-icon-theme
+      - code
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
