--- a/config/recipe-mac.yml
+++ b/config/recipe-mac.yml
@@ -37,6 +37,7 @@ modules:
       - hl2linux-selinux
       - system76-scheduler
       - morewaita-icon-theme
+      - code
       - kmod-wl
     remove:
       - firefox # default firefox removed in favor of flatpak
@@ -75,6 +76,20 @@ modules:
     custom-flatpaks: # this section is optional
       # - Celluloid: io.github.celluloid_player.Celluloid
       # - Krita: org.kde.krita
+      - Codecs: org.freedesktop.Platform.ffmpeg-full//22.08
+      - Shortwave: de.haeckerfelix.Shortwave
+      - Clapper: com.github.rafostar.Clapper
+      - Parabolic: org.nickvision.tubeconverter
+      - Mousai: io.github.seadve.Mousai
+      - Secrets: org.gnome.World.Secrets
+      - Visual Studio Code: com.visualstudio.code
+      - Black Box: com.raggesilver.BlackBox
+      - Resources: net.nokyan.Resources
+      # - Mission Center: io.missioncenter.MissionCenter
+      - SaveDesktop: io.github.vikdevelop.SaveDesktop
+      - Pika Backup: org.gnome.World.PikaBackup
+      - Metadata Cleaner: fr.romainvigier.MetadataCleaner
+      
 
   - type: script
     scripts:
