fix: improve flatpak options

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -75,8 +75,6 @@ modules:
   - type: yafti # if included, yafti and it's dependencies (pip & libadwaita)
                 #  will be installed and set up
     custom-flatpaks: # this section is optional
-      # - Celluloid: io.github.celluloid_player.Celluloid
-      # - Krita: org.kde.krita
       - Codecs: org.freedesktop.Platform.ffmpeg-full//22.08
       - Shortwave: de.haeckerfelix.Shortwave
       - Clapper: com.github.rafostar.Clapper
@@ -86,10 +84,10 @@ modules:
       - Visual Studio Code: com.visualstudio.code
       - Black Box: com.raggesilver.BlackBox
       - Resources: net.nokyan.Resources
-      # - Mission Center: io.missioncenter.MissionCenter
       - SaveDesktop: io.github.vikdevelop.SaveDesktop
       - Pika Backup: org.gnome.World.PikaBackup
       - Metadata Cleaner: fr.romainvigier.MetadataCleaner
+      - Dropbox: com.dropbox.Client
       
 
   - type: script
