fix: add cryptomator option

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -88,6 +88,7 @@ modules:
       - Pika Backup: org.gnome.World.PikaBackup
       - Metadata Cleaner: fr.romainvigier.MetadataCleaner
       - Dropbox: com.dropbox.Client
+      - Cryptomator: org.cryptomator.Cryptomator
       
 
   - type: script
