--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -95,4 +95,4 @@ modules:
     scripts:
       # this sets up the proper policy & signing files for signed images to work
       - signing.sh
-      - ublue-update.sh
+      # - ublue-update.sh
