--- a/config/recipe-wl-beta.yml
+++ b/config/recipe-wl-beta.yml
@@ -59,6 +59,11 @@ modules:
       # - dconf-update-service # a service unit that updates the dconf db on boot
       # - devpod # https://devpod.sh/ as an rpm
 
+
+  - type: akmods
+    install:
+      - kmod-wl
+
   - type: fonts
     fonts:
       nerd-fonts:
