--- a/config/recipe-wl-beta.yml
+++ b/config/recipe-wl-beta.yml
@@ -40,7 +40,7 @@ modules:
       - system76-power
       - morewaita-icon-theme
       - code
-      - kmod-wl
+      # - kmod-wl
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
