feat: enable broadcom-wl

--- a/config/recipe-wl-beta.yml
+++ b/config/recipe-wl-beta.yml
@@ -96,5 +96,5 @@ modules:
     scripts:
       # this sets up the proper policy & signing files for signed images to work
       - signing.sh
-      # - broadcom.sh
+      - broadcom.sh
       - system76-power.sh
