--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -1,12 +1,9 @@
 ublue_variants:
-  - label: ublue-os/ublue
+  - label: enurean/ublue
     ks: /kickstart/ublue-os-nvidia.ks
     flavors:
       - label: ublue
-
-ublue_variants:
-  - label: ublue-os/ublue-wl
+  - label: enurean/ublue-wl
     ks: /kickstart/ublue-os.ks
     flavors:
       - label: ublue-wl
-      # - label: ublue-wl-beta
