--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -39,6 +39,7 @@ modules:
       - system76-scheduler
       - morewaita-icon-theme
       - code
+      - nautilus-python
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
