--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -96,3 +96,4 @@ modules:
     scripts:
       # this sets up the proper policy & signing files for signed images to work
       - signing.sh
+      - system76-scheduler
