add system76-scheduler shell extension

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -37,6 +37,7 @@ modules:
       - gnome-console
       - hl2linux-selinux
       - system76-scheduler
+      - gnome-shell-extension-system76-scheduler
       - morewaita-icon-theme
       - code
       - nautilus-python
