--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -97,4 +97,4 @@ modules:
     scripts:
       # this sets up the proper policy & signing files for signed images to work
       - signing.sh
-      - system76-scheduler
+      - system76-scheduler.sh
