--- a/config/recipe-beta.yml
+++ b/config/recipe-beta.yml
@@ -41,6 +41,7 @@ modules:
       - morewaita-icon-theme
       - code
       - nautilus-python
+      - nautilus-dropbox
     remove:
       - firefox # default firefox removed in favor of flatpak
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
