--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -1,5 +1,5 @@
 ublue_variants:
-  - label: enurean/ublue
+  - label: enurean/ublue-main
     ks: /kickstart/ublue-os-nvidia.ks
     flavors:
       - label: ublue
