fix: remove gnome-extension-app

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -49,6 +49,7 @@ modules:
       - gnome-terminal-nautilus
       - gnome-tour
       - gnome-system-monitor
+      - gnome-extension-app
       - htop
       - nvtop
 
