--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -49,7 +49,8 @@ modules:
       - gnome-terminal-nautilus
       - gnome-tour
       - gnome-system-monitor
-      - gnome-extensions-app
+      # - gnome-extensions-app
+      - gnome-software-rpm-ostree
       - htop
       - nvtop
 
