--- a/config/recipe-wl.yml
+++ b/config/recipe-wl.yml
@@ -22,7 +22,7 @@ modules:
 
   - type: rpm-ostree
     repos:
-      # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+      - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
       - https://copr.fedorainfracloud.org/coprs/kylegospo/hl2linux-selinux/repo/fedora-%OS_VERSION%/kylegospo-hl2linux-selinux-fedora-%OS_VERSION%.repo
       - https://copr.fedorainfracloud.org/coprs/kylegospo/system76-scheduler/repo/fedora-%OS_VERSION%/kylegospo-system76-scheduler-fedora-%OS_VERSION%.repo
       - https://copr.fedorainfracloud.org/coprs/szydell/system76/repo/fedora-%OS_VERSION%/szydell-system76-fedora-%OS_VERSION%.repo
@@ -30,15 +30,18 @@ modules:
       - https://copr.fedorainfracloud.org/coprs/trixieua/mutter-patched/repo/fedora-%OS_VERSION%/trixieua-mutter-patched-fedora-%OS_VERSION%.repo
     install:
       # - micro
-      # - starship
+      - starship
       - gnome-shell-extension-appindicator
       - gnome-shell-extension-just-perfection
       - gnome-shell-extension-caffeine
       - gnome-console
       - hl2linux-selinux
       - system76-scheduler
+      - gnome-shell-extension-system76-scheduler
       - system76-power
       - morewaita-icon-theme
+      - nautilus-python
+      - nautilus-dropbox
       - code
       - kmod-wl
       # - tlp
@@ -48,6 +51,9 @@ modules:
       - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
       - gnome-terminal
       - gnome-terminal-nautilus
+      - gnome-tour
+      - gnome-system-monitor
+      - gnome-software-rpm-ostree
       - power-profiles-daemon
       - htop
       - nvtop
@@ -79,19 +85,19 @@ modules:
   - type: yafti # if included, yafti and it's dependencies (pip & libadwaita)
                 #  will be installed and set up
     custom-flatpaks: # this section is optional
-      - Codecs: org.freedesktop.Platform.ffmpeg-full//22.08
+      - Codecs: org.freedesktop.Platform.ffmpeg-full
       - Shortwave: de.haeckerfelix.Shortwave
       - Clapper: com.github.rafostar.Clapper
       - Parabolic: org.nickvision.tubeconverter
       - Mousai: io.github.seadve.Mousai
       - Secrets: org.gnome.World.Secrets
-      - Visual Studio Code: com.visualstudio.code
+      # - Visual Studio Code: com.visualstudio.code
       - Black Box: com.raggesilver.BlackBox
       - Resources: net.nokyan.Resources
       - SaveDesktop: io.github.vikdevelop.SaveDesktop
       - Pika Backup: org.gnome.World.PikaBackup
       - Metadata Cleaner: fr.romainvigier.MetadataCleaner
-      - Dropbox: com.dropbox.Client
+      # - Dropbox: com.dropbox.Client
       - Cryptomator: org.cryptomator.Cryptomator
       
 
@@ -101,4 +107,5 @@ modules:
       - signing.sh
       - broadcom.sh
       - system76-power.sh
-      # - tlp
+      - system76-scheduler.sh
+      - finish-install.sh
