--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         recipe:
           - recipe.yml
           - recipe-wl.yml
-          - recipe-beta.yml
+          # - recipe-beta.yml
 # !!!
 
     steps:
