--- a/boot_menu.yml
+++ b/boot_menu.yml
@@ -1,9 +1,13 @@
 ublue_variants:
-  - label: enurean/ublue-main
-    ks: /kickstart/ublue-os-nvidia.ks
-    flavors:
-      - label: ublue-main
-  - label: enurean/ublue-wl
+  - label: enurean/ublue
+    # ks: /kickstart/ublue-os-nvidia.ks
     ks: /kickstart/ublue-os.ks
     flavors:
+      - label: ublue-main
+        info: Nvidia Legacy Drivers Included
       - label: ublue-wl
+        info: Broadcom Drivers Included
+  # - label: enurean/ublue-wl
+  #   ks: /kickstart/ublue-os.ks
+  #   flavors:
+  #     - label: ublue-wl
