--- a/config/recipe-wl.yml
+++ b/config/recipe-wl.yml
@@ -72,6 +72,10 @@ modules:
       # - dconf-update-service # a service unit that updates the dconf db on boot
       # - devpod # https://devpod.sh/ as an rpm
 
+  - type: akmods
+    install:
+      - kmod-wl
+
   - type: fonts
     fonts:
       nerd-fonts:
