--- a/config/recipe-wl.yml
+++ b/config/recipe-wl.yml
@@ -113,7 +113,7 @@ modules:
     scripts:
       # this sets up the proper policy & signing files for signed images to work
       - signing.sh
-      - broadcom.sh
+      - broadcom-wl.sh
       - system76-power.sh
       - system76-scheduler.sh
       - finish-install.sh
