--- a/config/recipe-main.yml
+++ b/config/recipe-main.yml
@@ -21,46 +21,13 @@ modules:
                   # should be added into /usr/etc/ as that is the proper "distro"
                   # config directory on ostree. Read more in the files module's README
 
-  # - type: rpm-ostree
-  #   repos:
-  #     - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
-  #     - https://copr.fedorainfracloud.org/coprs/kylegospo/hl2linux-selinux/repo/fedora-%OS_VERSION%/kylegospo-hl2linux-selinux-fedora-%OS_VERSION%.repo
-  #     - https://copr.fedorainfracloud.org/coprs/kylegospo/system76-scheduler/repo/fedora-%OS_VERSION%/kylegospo-system76-scheduler-fedora-%OS_VERSION%.repo
-  #     - https://copr.fedorainfracloud.org/coprs/dusansimic/themes/repo/fedora-%OS_VERSION%/dusansimic-themes-fedora-%OS_VERSION%.repo
-  #     - https://copr.fedorainfracloud.org/coprs/trixieua/mutter-patched/repo/fedora-%OS_VERSION%/trixieua-mutter-patched-fedora-%OS_VERSION%.repo
-  #   install:
-  #     # - micro
-  #     - starship
-  #     - gnome-shell-extension-appindicator
-  #     - gnome-shell-extension-just-perfection
-  #     - gnome-shell-extension-caffeine
-  #     - gnome-shell-extension-blur-my-shell
-  #     - gnome-console
-  #     - hl2linux-selinux
-  #     - system76-scheduler
-  #     - gnome-shell-extension-system76-scheduler
-  #     - morewaita-icon-theme
-  #     - code
-  #     - nautilus-python
-  #     - nautilus-dropbox
-  #   remove:
-  #     - firefox # default firefox removed in favor of flatpak
-  #     - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
-  #     - gnome-terminal
-  #     - gnome-terminal-nautilus
-  #     - gnome-tour
-  #     - gnome-system-monitor
-  #     - gnome-software-rpm-ostree
-  #     - htop
-  #     - nvtop
-
   - type: bling # configure what to pull in from ublue-os/bling
     install:
       - justfiles # add "!include /usr/share/ublue-os/just/bling.just"
                   # in your custom.just (added by default) or local justfile
       - nix-installer # shell shortcuts for determinate system's nix installers
       # - ublue-os-wallpapers
-      - ublue-update # https://github.com/ublue-os/ublue-update
+      # - ublue-update # https://github.com/ublue-os/ublue-update
       # - dconf-update-service # a service unit that updates the dconf db on boot
       # - devpod # https://devpod.sh/ as an rpm
 
@@ -77,7 +44,6 @@ modules:
         - Roboto
         - Open Sans
 
-
   - type: yafti # if included, yafti and it's dependencies (pip & libadwaita)
                 #  will be installed and set up
     custom-flatpaks: # this section is optional
@@ -87,13 +53,10 @@ modules:
       - Parabolic: org.nickvision.tubeconverter
       - Mousai: io.github.seadve.Mousai
       - Secrets: org.gnome.World.Secrets
-      # - Visual Studio Code: com.visualstudio.code
-      - Black Box: com.raggesilver.BlackBox
       - Resources: net.nokyan.Resources
       - SaveDesktop: io.github.vikdevelop.SaveDesktop
       - Pika Backup: org.gnome.World.PikaBackup
       - Metadata Cleaner: fr.romainvigier.MetadataCleaner
-      # - Dropbox: com.dropbox.Client
       - Cryptomator: org.cryptomator.Cryptomator
       
 
