--- a/config/common-packages.yml
+++ b/config/common-packages.yml
@@ -13,6 +13,7 @@
     - gnome-shell-extension-caffeine
     - gnome-shell-extension-blur-my-shell
     - gnome-shell-extension-user-theme
+    - gnome-shell-extension-dash-to-dock
     - gnome-console
     - hl2linux-selinux
     - system76-scheduler
@@ -22,7 +23,7 @@
     - nautilus-python
     - nautilus-dropbox
     - yaru-theme
-    - gnome-shell-theme-flat-remix
+    # - gnome-shell-theme-flat-remix
   remove:
     - firefox # default firefox removed in favor of flatpak
     - firefox-langpacks # langpacks needs to also be removed to prevent dependency problems
